--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "type": "project",
     "require": {
-        "php": "~7.1.3||~7.2.0||~7.3.0",
+        "php": "~7.2.0||~7.3.0",
         "monolog/monolog": "^2.2",
         "symfony/console": "^5.0"
     },
